@@ -6,12 +6,12 @@ namespace FeatureAdmin
     {
         #if (SP2007)
             public static string SharePointVersion = "2007";
-        #endif
-        #if (SP2010)
+        #elif (SP2010)
             public static string SharePointVersion = "2010";
-        #endif
-        #if (SP2013)
+        #elif (SP2013)
             public static string SharePointVersion = "2013";
+        #else
+            public static string SharePointVersion = "????";
         #endif
     }
 }
